# Agents-for-python

./: .env.sample  .flake8  .gitignore  Makefile  pyproject.toml  requirements.txt
.azdo/: ci-pr.yaml
.devcontainer/: Dockerfile  devcontainer.json  test-poetry.sh
.github/workflows/: codeql.yml  python-package.yml
libraries/Authentication/microsoft-agents-authentication-msal/: pyproject.toml
libraries/Authentication/microsoft-agents-authentication-msal/microsoft/agents/authentication/msal/: auth_types.py  msal_auth.py  msal_auth_configuration.py
libraries/Authentication/microsoft-agents-authorization-msal/: pyproject.toml
libraries/Client/microsoft-agents-client/: pyproject.toml  setup.py
libraries/Client/microsoft-agents-client/microsoft/agents/client/: __init__.py  agent_conversation_reference.py  bot_conversation_reference.py  channel_factory_protocol.py  channel_host_protocol.py  channel_info_protocol.py  channel_protocol.py  channels_configuration.py  configuration_channel_host.py  conversation_constants.py  conversation_id_factory.py  conversation_id_factory_options.py  conversation_id_factory_protocol.py  http_agent_channel.py  http_agent_channel_factory.py  http_bot_channel.py  http_bot_channel_factory.py
libraries/Client/microsoft-agents-connector/: pyproject.toml
libraries/Client/microsoft-agents-connector/microsoft/agents/connector/: __init__.py  _agents_token_credential_adapter.py  _connector_client_configuration.py  agent_sign_in_base.py  attachments_base.py  bot_sign_in_base.py  connector_client.py  connector_client_base.py  conversations_base.py  get_product_info.py  user_token_base.py  user_token_client_base.py
libraries/Client/microsoft-agents-connector/microsoft/agents/connector/client/: __init__.py  connector_client.py  user_token_client.py
libraries/Client/microsoft-agents-connector/microsoft/agents/connector/operations/: __init__.py  _connector_operations.py  _internals.py
libraries/Client/microsoft-agents-connector/microsoft/agents/connector/teams/: __init__.py  teams_connector_client.py
libraries/Client/microsoft-agents-connector/microsoft/agents/connector/token/: __init__.py  _user_token_client_configuration.py  user_token_client.py
libraries/Client/microsoft-agents-connector/microsoft/agents/connector/token/operations/: __init__.py  _internals.py  _user_token_operations.py
libraries/Core/microsoft-agents-authorization/: pyproject.toml
libraries/Core/microsoft-agents-authorization/microsoft/agents/authorization/: __init__.py  access_token_provider_base.py  agent_auth_configuration.py  anonymous_token_provider.py  jwt_token_validator.py
libraries/Core/microsoft-agents-core/: pyproject.toml
libraries/Core/microsoft-agents-core/microsoft/agents/core/: __init__.py  channel_adapter_protocol.py  turn_context_protocol.py
libraries/Core/microsoft-agents-core/microsoft/agents/core/models/: __init__.py  _agents_model.py  _type_aliases.py  action_types.py  activity.py  activity_importance.py  activity_types.py  adaptive_card_invoke_action.py  adaptive_card_invoke_response.py  adaptive_card_invoke_value.py  agents_model.py  animation_card.py  attachment.py  attachment_data.py  attachment_info.py  attachment_layout_types.py  attachment_view.py  audio_card.py  basic_card.py  caller_id_constants.py  card_action.py  card_image.py  channel_account.py  channels.py  contact_relation_update_action_types.py  conversation_account.py  conversation_members.py  conversation_parameters.py  conversation_reference.py  conversation_resource_response.py  conversations_result.py  delivery_modes.py  end_of_conversation_codes.py  entity.py  error.py  error_response.py  expected_replies.py  fact.py  geo_coordinates.py  hero_card.py  (+38 more)
libraries/Core/microsoft-agents-core/microsoft/agents/core/models/teams/: __init__.py  app_based_link_query.py  batch_failed_entries_response.py  batch_failed_entry.py  batch_operation_response.py  batch_operation_state_response.py  bot_config_auth.py  cache_info.py  cancel_operation_response.py  channel_info.py  config_auth_response.py  config_response.py  config_response_base.py  config_task_response.py  conversation_list.py  file_consent_card.py  file_consent_card_response.py  file_download_info.py  file_info_card.py  file_upload_info.py  meeting_details.py  meeting_details_base.py  meeting_end_event_details.py  meeting_event_details.py  meeting_info.py  meeting_notification.py  meeting_notification_base.py  meeting_notification_channel_data.py  meeting_notification_recipient_failure_info.py  meeting_notification_response.py  meeting_participant_info.py  meeting_participants_event_details.py  meeting_stage_surface.py  meeting_start_event_details.py  meeting_tab_icon_surface.py  message_actions_payload.py  message_actions_payload_app.py  message_actions_payload_attachment.py  message_actions_payload_body.py  message_actions_payload_conversation.py  (+67 more)
libraries/Hosting/microsoft-agents-hosting-teams/: pyproject.toml
libraries/Hosting/microsoft-agents-hosting-teams/microsoft/agents/hosting/teams/: __init__.py  teams_activity_handler.py  teams_info.py
test_samples/: README.md
test_samples/copilot_studio_client_sample/: app.py  chat_console_service.py  config.py  env.TEMPLATE  msal_cache_plugin.py
test_samples/echo_agent/: app.py  config.py  echo_agent.py
test_samples/echo_bot/: app.py  config.py  echo_bot.py
test_samples/empty_agent/: README.md  app.py  config.py  empty_agent.py  env.TEMPLATE
test_samples/teams_agent/: app.py  config.py  env.TEMPLATE  graph_client.py  teams_handler.py  teams_multi_feature.py  teams_sso.py
test_samples/wc_sso_agent/: app.py  config.py  graph_client.py  sso_agent.py
test_samples/weather-agent-open-ai/: app.py  config.py  env.TEMPLATE  weather_agent.py
(+187 files in other folders)
