[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-agents-authentication-msal"
version = "0.0.0a1"
description = "A msal-based authentication library for Microsoft Agents"
authors = [{name = "Microsoft Corporation"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "microsoft-agents-authentication",
    "msal>=1.31.1",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/microsoft-agents-protocol"
