[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-agents-client"
version = "0.0.0a1"
description = "A client library for Microsoft Agents"
authors = [{name = "Microsoft Corporation"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "microsoft-agents-core",
    "microsoft-agents-authorization",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/microsoft-agents-protocol"
