[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-agents-connector"
version = "0.0.0a1"
description = "A client library for Microsoft Agents"
authors = [{name = "Microsoft Corporation"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "isodate>=0.6.1",
    "azure-core>=1.30.0",
    "microsoft-agents-core",
    "microsoft-agents-authorization",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/microsoft-agents-client"
